[package]
name = "nym-zcash-grpc-pipes"
version = "0.1.0"
edition = "2021"

[lib]
name = "nym_proxy"
path = "src/nym_proxy/lib.rs"

[[bin]]
name = "server"
path = "src/run_server.rs"

[[bin]]
name = "client"
path = "src/run_client.rs"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7.11"
tokio-stream = "0.1.15"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
dashmap = "6"
log = "0.4"

nym-sdk = { git = "https://github.com/nymtech/nym" }
nym-sphinx-addressing = { git = "https://github.com/nymtech/nym" }
nym-bin-common = { git = "https://github.com/nymtech/nym" }
nym-sphinx-anonymous-replies = { git = "https://github.com/nymtech/nym" }
